syntax = "proto3";

option go_package = "./pb";

package pb;

message UserInform{
  int64 id = 1;
  string mobile =2;
  string nickname = 3;
}
message UserAuth{
  int64  id = 1;
  int64  userId = 2;
  string authType = 3;
  string authKey = 4;
}

message GetVerCodeReq{

}
message GetVerCodeResp{
  string key = 1;
  string b64s = 2;
}
message RegisterReq{
  string code = 1;
  string key = 2;
  string mobile = 3;
  string password = 4;
  string authKey = 5;
  string authType = 6;
}
message RegisterResp{
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}
message LoginReq{
  string  authType = 1;
  string  mobile = 2;
  string  password = 3;
}
message LoginResp{
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message GetUserInfoReq{
  int64  id = 1;
}
message GetUserInfoResp{
  UserInform userInform = 1;
}

message GenerateTokenReq{
  int64 userId = 1;
}
message GenerateTokenResp{
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

service role_rpc {
  rpc getVerCode(GetVerCodeReq) returns (GetVerCodeResp);
  rpc login(LoginReq) returns(LoginResp);
  rpc register(RegisterReq) returns(RegisterResp);
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
}